--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-        <link rel="stylesheet" href="animate.css">
+        <link rel="stylesheet" href="assets/animate.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charity Website Design</title>
@@ -586,7 +586,7 @@
 
 </div>
 
-<script src="animationCounter.js" charset="utf-8"></script>
+<script src="assets/animationCounter.js" charset="utf-8"></script>
 
 <script>
 
@@ -627,7 +627,7 @@ $('#counter-block').ready(function(){
 
 
 
-<script src="wow.js"></script>
+<script src="assets/wow.js"></script>
 
 <script>
        wow = new WOW(
